# python-turborepo

./: .cspell.json  .env.example  README.md  RELEASE-NOTES.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy-coding-agent.yml
agents/coding-agent/: Dockerfile
agents/coding-agent/src/: graph.py  nodes.py  state.py
agents/research-agent/src/: nodes.py
apis/gateway/src/: main.py
apis/gateway/src/routers/: chat.py
apps/code-reviewer/: pyproject.toml
apps/code-reviewer/api/: index.py
apps/hello-api/api/: index.py
apps/notes-api/: pyproject.toml
apps/notes-api/api/: index.py
apps/resume-analyzer/: pyproject.toml
apps/resume-analyzer/api/: index.py
docs/: GUIDE.md  HLD.md  LLD.md
mcp-servers/code-runner/: Dockerfile  pyproject.toml
mcp-servers/knowledge-base/: pyproject.toml
