[project]
name = "resume-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.25",
    "groq>=0.11",
    "httpx>=0.27",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
